--- a/e commerce/index.html
+++ b/e commerce/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="bg-blue-600 p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-white text-2xl font-bold">Logo</a>
+            <a href="#" class="text-white text-2xl font-bold">kdib</a>
             <div class="space-x-4">
                 <a href="#" class="text-white">Accueil</a>
                 <a href="#" class="text-white">Produits</a>
